adjust: java 11에 맞게 toList 수정